# stempel-app

./: index.html  package.json  pnpm-lock.yaml  tsconfig.json  ui.config.json  ui.preset.js  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_operation.rs  img_watermark.rs  lib.rs  main.rs  scale_image.rs  utils.rs
src-tauri/src/img_watermark/: load_base.rs  load_watermark.rs  multi_async.rs  multi_thread.rs  rayon_async.rs  single_img.rs
src/assets/: lang.json
src/components/: Brand.tsx  Draggable.tsx  Nav.tsx  OpenResize.tsx  ProgressWm.tsx  ResizeSlider.tsx  hero.tsx  spinner.tsx
src/components/ui/: button.tsx  checkbox.tsx  label.tsx  sheet.tsx  slider.tsx  toast.tsx
src/lib/: fs-utils.ts  open-image.ts  utils.ts
src/routes/: about.tsx  not-found.tsx
src/state/: base-state.tsx  img-state.tsx  proceed.tsx  progress.tsx  state-route.tsx  wm-state.tsx
src/types/: img-types.ts
