[package]
name = "stempel"
version = "0.0.0"
description = "Blazingly Fast Mobile App Image Watermarker"
authors = ["Iqbal Abdurachman"]
license = "GPL-2.0"
repository = ""
edition = "2021"

[lib]
name = "stempel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.0.0-alpha.13", features = [] }

[dependencies]
tauri = { version = "=2.0.0-alpha.20", features = ["protocol-asset"] }
tauri-plugin-shell = "=2.0.0-alpha.6"
tauri-plugin-dialog = "2.0.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.7"
eyre = "0.6.12"
tokio = { version = "1.36.0", features = ["fs"] }
rayon = "1.9.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
